# QtProtobuf-Bug-123400

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  bug.proto
.github/workflows/: cmake.yml
